--- a/llt/msprof_cpp/ut/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/CMakeLists.txt
@@ -1,11 +1,11 @@
-# add_subdirectory(app) # done
-# add_subdirectory(common) # done
-# add_subdirectory(device) # done
-# add_subdirectory(driver) # done
-# add_subdirectory(job_wrapper) # done
-# add_subdirectory(message)  # done
-# add_subdirectory(msprof) # ok
-# add_subdirectory(transport) # done
-# add_subdirectory(streamio) # done
-add_subdirectory(msprofbin) # 遗留
-# add_subdirectory(stub_utest) # done
+add_subdirectory(app) # done
+add_subdirectory(common) # done
+add_subdirectory(device) # done
+add_subdirectory(driver) # done
+add_subdirectory(job_wrapper) # done
+add_subdirectory(message)  # done
+add_subdirectory(msprof) # ok
+add_subdirectory(transport) # done
+add_subdirectory(streamio) # done
+add_subdirectory(msprofbin) # done
+add_subdirectory(stub_utest) # done
